--- a/public/css/login.css
+++ b/public/css/login.css
@@ -113,6 +113,7 @@ form a:hover {
 .form .login-signup {
     margin-top: 30px;
     text-align: center;
+    font-size: 1.6rem;
 }
 
 .form a.text-dk {
