--- a/public/css/header.css
+++ b/public/css/header.css
@@ -36,7 +36,6 @@
 }
 
 .header__item {
-    padding: 0 20px;
     height: var(--header-height);
     position: relative;
 }
@@ -69,6 +68,7 @@
     align-items: center;
     color: #515a6e;
     height: var(--header-height);
+    padding: 20px;
 }
 
 .header__item-title {
@@ -91,7 +91,6 @@
     margin-left: 15px;
     font-size: 1.4rem;
     color: #515a6e;
-    padding: 10px 15px;
     border: 1px solid #515a6e;
     border-radius: 50px;
 }
@@ -106,6 +105,8 @@
 .header__menu-link {
     text-decoration: none;
     color: #515a6e;
+    padding: 10px 15px;
+    display: inline-block;
 }
 
 .header__menu-item:hover .header__menu-link{
@@ -127,10 +128,6 @@
     z-index: 18;
 }
 
-.header__subItem {
-    padding: 10px;
-}
-
 .header__subItem:hover {
     background-color: rgb(233, 233, 233);
     cursor: pointer;
@@ -139,7 +136,9 @@
 .header__subItem-link {
     text-decoration: none;
     color: #666;
-    font-size: 1.4rem
+    font-size: 1.4rem;
+    padding: 10px;
+    display: block;
 }
 
 /* Header User */
@@ -162,6 +161,7 @@
     border-radius: 5px;
     font-size: 1.4rem;
     z-index: 20;
+    cursor: pointer;
 }
 
 .header__user-info {
@@ -182,10 +182,6 @@
     display: block;
 }
 
-.header__user-info-item {
-    padding: 8px;
-}
-
 .header__user-info-item:last-child {
     border-top: 1px solid #ccc;
 }
@@ -199,4 +195,6 @@
     text-decoration: none;
     color: #666;
     font-size: 1.4rem;
+    padding: 8px;
+    display: block;
 }
