--- a/public/css/header.css
+++ b/public/css/header.css
@@ -157,11 +157,12 @@
 
 .header__user-name {
     border: 1px solid rgba(81, 154, 250, 0.952);
-    padding: 5px 10px;
-    border-radius: 5px;
+    padding: 10px 16px;
     font-size: 1.4rem;
     z-index: 20;
     cursor: pointer;
+    border-radius: 20px;
+    box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
 }
 
 .header__user-info {
