--- a/public/css/user_problem.css
+++ b/public/css/user_problem.css
@@ -242,110 +242,157 @@
 }
 
 .container__problem-form-input {
-    padding: 8px 12px;
+    padding: 12px;
     color: #666;
-    border-radius: 16px;
+    border-radius: 20px;
     border: 1px solid #666;
     box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
 }
 
 .container__problem-form-icon {
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 16px;
+    top: 14px;
     color: #666;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 /* User Item _ Container Body*/
-.container__user-item {
+.container__problem-body {
     background-color: #fff;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
+    padding: 20px 0;
+    margin-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.problem__card {
+    max-width: 540px;
+    height: 120px;
+    border: 1px solid #4CC790;
+    border-radius: 5px;
+    display: flex;
+    margin-bottom: 20px;
+    margin-left: 20px;  
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.problem__info {
+    display: flex;
+    align-items: center;
+}
+
+.problem__user {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid #4CC790;
+}
+
+.problem__user_image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1px solid black;
+    border-radius: 100px;
+}
+
+.problem__user_name {
+    font-size: 12px;
+    margin-top: 5px
+}
+
+.problem__statistic {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 15px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-}
-
-.container__user-item-task {
-    padding: 15px 0;
-}
-
-.container__user-item-nameEx {
-    color: #000;   
-    font-size: 1.6rem;
-    text-decoration: none;
-    font-weight: 600;
-    margin-right: 4px;
-}
-
-.container__user-item-nameEx:hover {
-    text-decoration: underline;
-}
-
-.container__user-item-level {
-    color: #fff;
-    font-size: 1.4rem;
-    padding: 5px 10px;
-    border-radius: 50px;
-    margin: 0;
-}
-
-.easy {
-    background-color: #77c148;
-}
-
-.medium {
-    background-color: #faa05e;
-}
-
-.container__user-item-tag {
-    display: flex;
-}
-
-.container__user-item-tag-item{
-    color: #999;
-    padding: 6px 12px;
-    border-radius: 5px;
-    background-color: #eee;
-    font-size: 1.4rem;
-    margin: 0;
-    margin: 0 5px;
-}
-
-.containerr__user-item-avatar {
-    margin: 15px 0;
-}
-
-.containerr__user-item-avatar-rim {
-    height: 60px;
-}
-
-.containerr__user-item-owner {
-    font-size: 1.3rem;
-    color: #000;
-    margin-bottom: 10px;
-    text-decoration: none;
-}
-
-.containerr__user-item-owner:hover {
-    text-decoration: underline;
-}
-
-.container__user-item-info {
-    background-color: #fff;
-    height: 24px;
-    display: flex;
     justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    background-color: #f5f6f7;
 }
 
-.container__user-item-content {
-    font-size: 1.3rem;  
-    color: #666;
-    font-weight: 400;
+.problem__detail {
+    margin-left: 8px
+}
+
+.problem__detail_heading {
+    font-size: 1.6rem;
+    color: #515a6e;
+    text-decoration: none;
+}
+
+.problem__detail_heading:hover {
+    opacity: 0.6;
+}
+
+.problem__detail_level {
+    font-size: 1.2rem;
+    margin-top: 5px;
+}
+
+.problem__detail_description {
+    font-size: 1.2rem;
+    overflow: hidden;
+    color: #878d9b
+}
+.problem__do {
+    background-color: #4CC790;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: .5s;
+    border: 1px solid #4CC790;
+    font-size: 1.2rem;
+}
+.problem__do:hover{
+    background-color: white;
+    color: #4CC790;
+}
+.single-chart {
+    width: 70%;
+    justify-content: space-around;
+}
+
+.circular-chart {
+    display: block;
+    margin: 0 auto;
+    max-width: 80%;
+    max-height: 250px;
+}
+
+.circle-bg {
+    fill: none;
+    stroke: #eee;
+    stroke-width: 3.8;
+}
+
+.circle {
+    fill: none;
+    stroke-width: 2.8;
+    stroke-linecap: round;
+    animation: progress 1s ease-out forwards;
+}
+
+@keyframes progress {
+    0% {
+        stroke-dasharray: 0 100;
+    }
+}
+
+.circular-chart.orange .circle {
+    stroke: #ff9f00;
+}
+
+.circular-chart.green .circle {
+    stroke: #4CC790;
+}
+
+.circular-chart.blue .circle {
+    stroke: #3c9ee5;
+}
+
+.percentage {
+    fill: #666;
+    font-family: sans-serif;
+    font-size: 1rem;
+    text-anchor: middle;
 }
