--- a/public/css/home.css
+++ b/public/css/home.css
@@ -135,6 +135,9 @@
 .container__problem-search {
     margin-bottom: 30px;
     align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container__problem-search-list {
@@ -210,10 +213,12 @@
 }
 
 .container__problem-form-input {
+    width: 300px;
     padding: 12px 12px;
     color: #666;
     border-radius: 20px;
-    border: 1px solid #666;
+    border: 1px solid #e3e3e3;
+    outline: none;
     box-shadow: rgb(0 0 0 / 15%) 1.95px 1.95px 2.6px;
 }
 
@@ -236,12 +241,12 @@
 .problem__card {
     max-width: 540px;
     height: 120px;
-    border: 1px solid #4CC790;
+    border: 2px solid #373840;
+    padding: 5px;
     border-radius: 5px;
     display: flex;
     margin-bottom: 20px;
     margin-left: 20px;  
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .problem__info {
@@ -254,14 +259,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-right: 1px solid #4CC790;
+    border-right: 2px solid #373840;
 }
 
 .problem__user_image {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     object-fit: cover;
-    border: 1px solid black;
     border-radius: 100px;
 }
 
@@ -282,8 +286,9 @@
 }
 
 .problem__detail_heading {
-    font-size: 1.6rem;
-    color: #515a6e;
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: black;
     text-decoration: none;
 }
 
@@ -293,13 +298,18 @@
 
 .problem__detail_level {
     font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
     margin-top: 5px;
 }
 
 .problem__detail_description {
     font-size: 1.2rem;
     overflow: hidden;
-    color: #878d9b
+    color: #878d9b;
+    margin: 0;
+    padding: 0;
+    margin-top: 3px;
 }
 .problem__do {
     background-color: #4CC790;
